--- a/css/style-heading.css
+++ b/css/style-heading.css
@@ -15,11 +15,10 @@
 .heading{
 	margin: 0em 0 0.5em 0;
     font-weight: 600;
-    font-family: 'Titillium Web', sans-serif;
     position: relative;
-    font-size: 16px;
-    line-height: 30px;
-    padding: 10px 10px 10px 15%;
+    font-size: 12px;
+    line-height: 22px;
+    padding: 5px 5px 5px 10px;
     color: #355681;
 	box-shadow: 
 		inset 0 0 0 1px rgba(53,86,129, 0.4), 
@@ -30,12 +29,11 @@
 }
 .heading1{
 	margin: 0em 0 0.5em 0;
-    font-weight: 600;
-    font-family: 'Titillium Web', sans-serif;
+    font-weight: 600; 
     position: relative;
-    font-size: 16px;
-    line-height: 0px;
-    padding: 10px 10px 10px 15%;
+    font-size: 14px;
+    line-height: 24px;
+    padding:5px 5px 5px 15px;
     color: #355681;
 	box-shadow: 
 		inset 0 0 0 1px rgba(53,86,129, 0.4), 
