--- a/css/theme-default/materialadmin.css
+++ b/css/theme-default/materialadmin.css
@@ -11423,7 +11423,7 @@ xcustom form elements
     opacity: 1;
 }
 .c-cursor{cursor:pointer;}
-.main-card{height:245px;}
+/* .main-card{height:245px;} */
 @media screen and (max-width: 767px) {
 	html,
 body {
