--- a/css/theme-default/materialadmin.css
+++ b/css/theme-default/materialadmin.css
@@ -11424,6 +11424,7 @@ xcustom form elements
 }
 .c-cursor{cursor:pointer;}
 /* .main-card{height:245px;} */
+ .testdisable{background-color: #808797;}.anly:hover{background-color: #fff;}.dropbtn{background-color: #ff9800; color: white; padding: 10px 20px 10px 20px; font-size: 12px; border: none; border-radius: 25px; line-height: 20px; margin: 14px 0 0 0;}.dropdown{position: relative; display: inline-block;}.dropdown-content{display: none; position: absolute; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1;}.dropdown-content a{color: black; background: #fff; padding: 12px 16px; text-decoration: none; display: block;}.dropdown-content a:hover{background-color: #ddd}.dropdown:hover .dropdown-content{display: block;}.dropdown:hover .dropbtn{background-color: #ff9800;}
 @media screen and (max-width: 767px) {
 	html,
 body {
@@ -11481,6 +11482,7 @@ body {
     margin-top: 10px;
     margin-right: -15px;
 }
+.dropdown{float:right;}
 }
 /*media for ipad Pro only****/
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1200px) {
