--- a/css/theme-default/materialadmin.css
+++ b/css/theme-default/materialadmin.css
@@ -11422,7 +11422,9 @@ xcustom form elements
     visibility: visible;
     opacity: 1;
 }
+.p-none{padding-left:0px;padding-right:0px;}
 .c-cursor{cursor:pointer;}
+.buy-icond{display:flex;}
 /* .main-card{height:245px;} */
  .testdisable{background-color: #808797;}.anly:hover{background-color: #fff;}.dropbtn{background-color: #ff9800; color: white; padding: 10px 20px 10px 20px; font-size: 12px; border: none; border-radius: 25px; line-height: 20px; margin: 14px 0 0 0;}.dropdown{position: relative; display: inline-block;}.dropdown-content{display: none; position: absolute; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1;}.dropdown-content a{color: black; background: #fff; padding: 12px 16px; text-decoration: none; display: block;}.dropdown-content a:hover{background-color: #ddd}.dropdown:hover .dropdown-content{display: block;}.dropdown:hover .dropbtn{background-color: #ff9800;}
 @media screen and (max-width: 767px) {
@@ -11451,6 +11453,7 @@ body {
     margin-top: 15px !important;
     margin-right: -22px !important;
 }
+.buy-icond{display:flex;padding-left:12px;}
 }
 /*media 767 End Here ****/
 /*media for ipad only****/
@@ -11483,6 +11486,7 @@ body {
     margin-right: -15px;
 }
 .dropdown{float:right;}
+.buy-icond{display:flex;padding-left:12px;}
 }
 /*media for ipad Pro only****/
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1200px) {
