--- a/css/sky-forms.css
+++ b/css/sky-forms.css
@@ -1,4 +1,3 @@
-/**/
 /* font */
 /**/
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
@@ -1066,4 +1065,8 @@
 .sky-form .radio + .radio,
 .sky-form .checkbox + .checkbox {
   margin-top: 0;
+}
+/**/
+.sky-form-margin-20 {
+    margin-top: 15px;
 }
