tutor profile changes

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -203,9 +203,9 @@ button:hover {
       height: 22px;
       width: 22px; }
 
-.btn-primary:hover {
-  background-color: #ff763a;
-  opacity: 1; }
+/* .btn-primary:hover { */
+  /* background-color: #ff763a; */
+  /* opacity: 1; } */
 
 .btn-secondary:hover {
   background-color: #ff5e3a;
