--- a/css/theme-default/bootstrap.css
+++ b/css/theme-default/bootstrap.css
@@ -6700,7 +6700,7 @@ button.close {
   background-color: #ffffff;
   border: 1px solid #999999;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 2px;
+  border-radius:10px;
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   background-clip: padding-box;
@@ -6721,13 +6721,14 @@ button.close {
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
-.modal-header {
-  padding: 15px;
-  border-bottom: 1px solid #e5e5e5;
-  min-height: 16.846153846px;
-  background-color:#2196f3;
-  color: white;
-  text-align: left;
+.modal-header { 
+   padding: 15px;
+    border-bottom: 1px solid #e5e5e5;
+    min-height: 16.846153846px;
+    background:#2196f3;
+    color: white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .modal-header .close {
   margin-top: -2px;
