--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -45,12 +45,28 @@
     padding: 11px 15px !important; 
 }
 .card-body-padding-pro{padding:10px 12px !important;}
+.Ellipse_2_copy_24 {
+  border-radius: 50%;
+  background-image: -moz-linear-gradient( 43deg, rgb(90,210,242) 0%, rgb(86,98,255) 100%);
+  background-image: -webkit-linear-gradient( 43deg, rgb(90,210,242) 0%, rgb(86,98,255) 100%);
+  background-image: -ms-linear-gradient( 43deg, rgb(90,210,242) 0%, rgb(86,98,255) 100%);
+  box-shadow: 0px 2px 16px 0px rgba(159, 193, 255, 0.004);
+  position: absolute;
+  left: 808px;
+  top: 784px;
+  width: 30px;
+  height: 30px;
+  z-index: 77;
+}
+
 .tool-edit
 {
 	font-size: 0.875rem;
     font-weight: 700;
-    background-color: rgb(240, 85, 16);
-    box-shadow:0px 2px 22px 0px #f78989; 
+     background-image: -moz-linear-gradient( 43deg, rgb(90,210,242) 0%, rgb(86,98,255) 100%);
+   background-image: -webkit-linear-gradient( 43deg, rgb(90,210,242) 0%, rgb(86,98,255) 100%);
+   background-image: -ms-linear-gradient( 43deg, rgb(90,210,242) 0%, rgb(86,98,255) 100%);
+   box-shadow: 0px 2px 16px 0px #fb8888;
     color: #fff;
     height: 28px;
     line-height: 1;
@@ -65,12 +81,11 @@
 	cursor:pointer;
 	border: 0;
 } 
-.tool-plus
-{
+.tool-plus {
 	font-size: 0.875rem;
     font-weight: 700;
-    background-color: rgb(17, 144, 232);
-    box-shadow:0px 2px 22px 0px #f78989; 
+   background-color: rgb(240, 85, 16);
+   box-shadow: 0px 2px 16px 0px #f97575;
     color: #fff;
     height: 28px;
     line-height: 1;
@@ -100,7 +115,7 @@
 .m-t-2{margin-top:2px;}
 .certificate-icon{
   border-radius: 5px;
-  background-color: rgb(196, 223, 155);
+  background-color: rgb(26, 164, 15);
   color: #fff;  
   width:38px;
   height:38px;
@@ -153,11 +168,27 @@ padding: 0px 10px !important;}
     text-align: left;
 }
 .hr-profile{margin-top:10px !important;margin-bottom:10px !important;}
-.red{background:rgb(214, 6, 6)!important;}
+.red{
+	  
+	 background-image: -moz-linear-gradient( 43deg, rgb(240,85,16) 0%, rgb(226,39,107) 100%);
+  background-image: -webkit-linear-gradient( 43deg, rgb(240,85,16) 0%, rgb(226,39,107) 100%);
+  background-image: -ms-linear-gradient( 43deg, rgb(240,85,16) 0%, rgb(226,39,107) 100%);
+  box-shadow: 0px 2px 16px 0px #ef9e9e;
+	}
 .p-l-0{padding-left:0px;}
 .p-l-r-0{padding-left:5px;padding-right:0px;}
 .m-r-5{margin-right:5px;}
-.m-10{margin:0px 5px;}
+.m-10{margin:0px 5px;} 
+.p-r-icon-2{padding-right:14px !important;}
+.p-r-icon-3{padding-right:20px !important;}
+.p-r-icon-4{padding-right:20px !important;}
+.form-group{padding-top:0px !important;}
+.p-inputtext{padding: 5px 12px;}
+.second{ 
+  background-color: rgb(17, 144, 232)!important; 
+}
+
+
  @media screen and (max-width: 767px) { 
 }
 /*media 767 End Here ****/
@@ -168,3 +199,4 @@ padding: 0px 10px !important;}
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1200px) {
  	
 }
+ 
